--- a/wordpress/wp-content/themes/wp_product/style.css
+++ b/wordpress/wp-content/themes/wp_product/style.css
@@ -13,3 +13,42 @@ article {
     text-align: center;
     padding: 2em;
 }
+
+ul {
+    padding: 0;
+}
+
+li {
+    list-style: none;
+}
+
+.formail {
+    text-align: center;
+    margin: 1em;
+}
+
+h1 {
+  -webkit-box-sizing: content-box;
+  -moz-box-sizing: content-box;
+  box-sizing: content-box;
+  cursor: pointer;
+  border: none;
+  font: normal normal bold 80px/normal "Creepster", Helvetica, sans-serif;
+  color: rgba(255,255,255,1);
+  text-align: center;
+  -o-text-overflow: clip;
+  text-overflow: clip;
+  text-shadow: 1px 1px 0 #2ecc71 , -1px -1px 0 #2ecc71 , 1px -1px 0 #2ecc71 , -1px 1px 0 #2ecc71 ;
+  -webkit-transition: text-shadow 500ms cubic-bezier(0.42, 0, 0.58, 1);
+  -moz-transition: text-shadow 500ms cubic-bezier(0.42, 0, 0.58, 1);
+  -o-transition: text-shadow 500ms cubic-bezier(0.42, 0, 0.58, 1);
+  transition: text-shadow 500ms cubic-bezier(0.42, 0, 0.58, 1);
+}
+
+h1:hover {
+    text-shadow: 1px 1px 8px rgba(46,204,113,0.5) , -1px -1px 8px rgba(46,204,113,0.5) , 1px -1px 8px rgba(46,204,113,0.5) , -1px 1px 8px rgba(46,204,113,0.5) ;
+ -webkit-transition: text-shadow 250ms cubic-bezier(0.42, 0, 0.58, 1);
+ -moz-transition: text-shadow 250ms cubic-bezier(0.42, 0, 0.58, 1);
+ -o-transition: text-shadow 250ms cubic-bezier(0.42, 0, 0.58, 1);
+ transition: text-shadow 250ms cubic-bezier(0.42, 0, 0.58, 1);
+}
