--- a/wordpress/wp-content/themes/wp_product/style.css
+++ b/wordpress/wp-content/themes/wp_product/style.css
@@ -22,18 +22,34 @@ li {
     list-style: none;
 }
 
+.post-meta li {
+    box-sizing: content-box;
+ cursor: pointer;
+ border: none;
+ font: normal 72px/normal "Passero One", Helvetica, sans-serif;
+ color: rgba(255,255,255,1);
+ text-align: center;
+ -o-text-overflow: clip;
+ text-overflow: clip;
+ text-shadow: 0 1px 0 rgb(204,204,204) , 0 2px 0 rgb(201,201,201) , 0 3px 0 rgb(187,187,187) , 0 4px 0 rgb(185,185,185) , 0 5px 0 rgb(170,170,170) , 0 6px 1px rgba(0,0,0,0.0980392) , 0 0 5px rgba(0,0,0,0.0980392) , 0 1px 3px rgba(0,0,0,0.298039) , 0 3px 5px rgba(0,0,0,0.2) , 0 5px 10px rgba(0,0,0,0.247059) , 0 10px 10px rgba(0,0,0,0.2) , 0 20px 20px rgba(0,0,0,0.14902) ;
+ -webkit-transition: all 300ms cubic-bezier(0.42, 0, 0.58, 1);
+ -moz-transition: all 300ms cubic-bezier(0.42, 0, 0.58, 1);
+ -o-transition: all 300ms cubic-bezier(0.42, 0, 0.58, 1);
+ transition: all 300ms cubic-bezier(0.42, 0, 0.58, 1);
+}
+
 .formail {
     text-align: center;
     margin: 1em;
 }
 
 h1 {
-  -webkit-box-sizing: content-box;
-  -moz-box-sizing: content-box;
+  width: 50%;
+  margin: auto;
   box-sizing: content-box;
   cursor: pointer;
   border: none;
-  font: normal normal bold 80px/normal "Creepster", Helvetica, sans-serif;
+  font: normal normal bold 200px/normal "Creepster", Helvetica, sans-serif;
   color: rgba(255,255,255,1);
   text-align: center;
   -o-text-overflow: clip;
@@ -51,4 +67,14 @@ h1:hover {
  -moz-transition: text-shadow 250ms cubic-bezier(0.42, 0, 0.58, 1);
  -o-transition: text-shadow 250ms cubic-bezier(0.42, 0, 0.58, 1);
  transition: text-shadow 250ms cubic-bezier(0.42, 0, 0.58, 1);
+}
+
+h2 {
+    font-family: 'Barrio', cursive;
+    font-size: 4em;
+}
+
+h3 {
+    font-family: 'Barrio', cursive;
+    font-size: 2em;
 }
