ajout de quelque styles css

--- a/wordpress/wp-content/themes/wp_product/style.css
+++ b/wordpress/wp-content/themes/wp_product/style.css
@@ -7,9 +7,10 @@ Description: yolo theme
 */
 
 article {
+    background-color: rgb(214, 173, 118);
     width: 60%;
     margin: auto;
-    border: 2px solid black;
+    margin-top: 3em;
     text-align: center;
     padding: 2em;
 }
@@ -41,6 +42,7 @@ li {
 .formail {
     text-align: center;
     margin: 1em;
+
 }
 
 h1 {
@@ -72,9 +74,51 @@ h1:hover {
 h2 {
     font-family: 'Barrio', cursive;
     font-size: 4em;
+    color: white;
 }
 
 h3 {
     font-family: 'Barrio', cursive;
     font-size: 2em;
+    color: white;
+}
+
+.beerbutton {
+    margin: 0 0.5em;
+    display: inline-block;
+  -webkit-box-sizing: content-box;
+  -moz-box-sizing: content-box;
+  box-sizing: content-box;
+  cursor: pointer;
+  padding: 0 20px;
+  border: none;
+  -webkit-border-radius: 20px;
+  border-radius: 20px;
+  font: normal normal bold 20px/40px "Baumans", Helvetica, sans-serif;
+  color: black;
+  -o-text-overflow: clip;
+  text-overflow: clip;
+  background: rgb(221, 221, 221);
+  -webkit-box-shadow: 0 1px 0 0 rgb(119,119,119) , 0 2px 0 0 rgb(119,119,119) , 0 3px 0 0 rgb(119,119,119) , 0 4px 0 0 rgb(119,119,119) , 0 5px 0 0 rgb(119,119,119) , 0 6px 0 0 rgb(119,119,119) , 0 0 5px 0 rgba(0,0,0,0.0980392) , 0 1px 3px 0 rgba(0,0,0,0.298039) , 0 3px 5px 0 rgba(0,0,0,0.2) , 0 5px 10px 0 rgba(0,0,0,0.247059) , 0 10px 10px 0 rgba(0,0,0,0.2) , 0 20px 20px 0 rgba(0,0,0,0.14902) ;
+  box-shadow: 0 1px 0 0 rgb(119,119,119) , 0 2px 0 0 rgb(119,119,119) , 0 3px 0 0 rgb(119,119,119) , 0 4px 0 0 rgb(119,119,119) , 0 5px 0 0 rgb(119,119,119) , 0 6px 0 0 rgb(119,119,119) , 0 0 5px 0 rgba(0,0,0,0.0980392) , 0 1px 3px 0 rgba(0,0,0,0.298039) , 0 3px 5px 0 rgba(0,0,0,0.2) , 0 5px 10px 0 rgba(0,0,0,0.247059) , 0 10px 10px 0 rgba(0,0,0,0.2) , 0 20px 20px 0 rgba(0,0,0,0.14902) ;
+  text-shadow: 0 1px 0 #FFFFFF ;
+}
+
+.beerbutton:hover {
+  background: #FFFFFF;
+}
+
+.beerbutton:active {
+  margin: 6px 0 0;
+  background: rgb(221, 221, 221);
+  -webkit-box-shadow: 0 -1px 10px 0 rgba(0,0,0,0.247059) , 0 4px 10px 0 rgba(0,0,0,0.2) , 0 14px 20px 0 rgba(0,0,0,0.14902) ;
+  box-shadow: 0 -1px 10px 0 rgba(0,0,0,0.247059) , 0 4px 10px 0 rgba(0,0,0,0.2) , 0 14px 20px 0 rgba(0,0,0,0.14902) ;
+}
+
+.beerbutton:focus {
+  background: rgb(221, 221, 221);
+}
+
+.radio {
+    color: white;
 }
