--- a/wordpress/wp-content/themes/wp_product/style.css
+++ b/wordpress/wp-content/themes/wp_product/style.css
@@ -6,13 +6,25 @@ Author URI:
 Description: yolo theme
 */
 
+body {
+    margin: 0;
+}
+
 article {
-    background-color: rgb(214, 173, 118);
     width: 60%;
     margin: auto;
     margin-top: 3em;
     text-align: center;
     padding: 2em;
+    z-index: 1;
+}
+
+img {
+    top: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    position: fixed;
 }
 
 ul {
